feat: add health as part of utoipa
